<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".MainActivity"
        tools:ignore="ExtraText">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_margin="16dp"
                app:tint="@color/blue" />
        </Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="30sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:gravity="center"
            android:textColor="#5D5B5B"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="14dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:autoLink="web"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <View
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_signup_with"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="12dp"/>

            <View
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/google"
                android:layout_marginEnd="20dp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/google"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:text="@string/log_in"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>