<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coarausel1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".corausel1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/picone"
        android:layout_marginTop="-50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_your_daily_water_n_intake_with_us"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achieve_your_hydration_goals_with_a_simple_tap"
        android:textSize="22dp"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dot1"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/click_me"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/btn1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/skyblue"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        />

</LinearLayout>
