<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coarausel3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".corausel1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/picthree"
        android:layout_marginTop="-50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_to_use_drink_n_tap_repeat"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staying_hydrated_is_very_easy_with_drops_water_tracker"
        android:textSize="22dp"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dot3"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/get_started"
        android:id="@+id/btn3"
        android:layout_marginHorizontal="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/skyblue"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        />

</LinearLayout>
</ScrollView>